payload/workloads/nginx-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
  labels:
    app: nginx-test
spec:
  selector:
    app: nginx-test
  ports:
    - name: http
      port: 80
      targetPort: 80
